# assemblyai-s2s-examples

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md
deploy/: README.md  railway.json  render.yaml
livekit/: README.md
livekit/01-basic-agent/: agent.py  pyproject.toml
livekit/02-onboarding-agent/: .env.example  Dockerfile  agent.py  pyproject.toml
livekit/plugin/: assemblyai_realtime.py
nextjs-frontend/: .env.local.example  Dockerfile  README.md  fly.toml  package.json  server.ts
nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/components/: AudioVisualizer.tsx  VoiceAgent.tsx
nextjs-frontend/hooks/: useAssemblyAISession.ts
phone/: .env.example  Dockerfile  README.md  fly.toml  requirements.txt  server.py
pipecat/: README.md  pcc-deploy.toml
pipecat/01-basic-agent/: bot.py  pyproject.toml
pipecat/02-lead-capture-agent/: bot.py  pyproject.toml
pipecat/plugin/: pipecat_assemblyai_realtime.py
scripts/: deploy-api.sh  setup.sh
sdk/: README.md  package.json  tsconfig.json  tsup.config.ts
sdk/src/: client.ts  index.ts  widget.ts
standalone-proxy/: .env.example  Dockerfile  README.md  fly.toml  package.json  server.js
tool-calling/: .env.example  01_basic_tools.py  02_weather_agent.py  03_multi_tool_agent.py  README.md
websocket/: README.md
websocket/node/: client.js  package.json
websocket/python/: agent_with_tools.py  basic_client.py  requirements.txt
