[project]
name = "assemblyai-pipecat-lead-capture"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[daily,webrtc,runner]",
    "websockets>=13",
    "python-dotenv",
    "loguru",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
